// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidepanel should render Sidepanel 1`] = `
.c2 {
  background: red;
}

.c0 {
  height: 100vh;
  max-height: 100vh;
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  bottom: 0;
  top: 0;
  right: 0;
  display: block;
}

.c0 .c1 {
  height: 100vh;
  max-height: 100vh;
  border-right: solid 1px rgba(44,35,46,0.15);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: #F0F0F0;
}

.c0 .c1:before {
  content: '';
  background-image: none;
  background-size: cover;
  background-position: center;
  opacity: 1;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: 0;
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      />
    </div>
  </div>
</body>
`;

exports[`Sidepanel should render Sidepanel with logo - 1 1`] = `
<body>
  .c3.c3.c3 {
  position: relative;
  display: inline-block;
  cursor: initial;
}

.c2 {
  background: red;
}

.c0 {
  height: 100vh;
  max-height: 100vh;
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  bottom: 0;
  top: 0;
  right: 0;
  display: block;
}

.c0 .c1 {
  height: 100vh;
  max-height: 100vh;
  border-right: solid 1px rgba(44,35,46,0.15);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: #F0F0F0;
}

.c0 .c1:before {
  content: '';
  background-image: none;
  background-size: cover;
  background-position: center;
  opacity: 1;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: 0;
}

.c4 {
  position: relative;
  margin: 32px 24px;
  z-index: 10;
}

<div>
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <div>
          <span
            class="c3 c4"
          >
            <svg
              fill="none"
              height="48"
              viewBox="0 0 40 40"
              width="48"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M31.016 0H8.984C4.02227 0 0 4.02227 0 8.984V31.016C0 35.9777 4.02227 40 8.984 40H31.016C35.9777 40 40 35.9777 40 31.016V8.984C40 4.02227 35.9777 0 31.016 0Z"
                fill="#2C232E"
              />
              <path
                d="M17.3018 25.2538C17.3018 23.7098 15.9578 22.5645 14.4138 22.5645H9.03516V31.6311H10.2805V27.9418H13.2378L15.8085 31.6271H17.3018L14.6458 27.9324C16.0898 27.8258 17.3018 26.7191 17.3018 25.2538ZM14.4138 26.7991H10.2805V23.7098H14.4138C15.2605 23.7098 16.0578 24.3071 16.0578 25.2538C16.0578 26.2005 15.2605 26.7991 14.4138 26.7991Z"
                fill="#D4D2D2"
              />
              <path
                d="M22.7305 23.7098H26.2158V30.4818H22.7305V31.6271H30.9971V30.4818H27.5105V23.7098H30.9971V22.5645H22.7305V23.7098Z"
                fill="#D4D2D2"
              />
              <path
                d="M16.0578 16.2884H15.7085L11.3765 8.37109H9.03516V17.4338H10.2805V9.51643H10.6298L14.9618 17.4338H17.3018V8.37109H16.0578V16.2884Z"
                fill="#D4D2D2"
              />
              <path
                d="M29.7518 8.37109V13.6498C29.7518 15.3924 28.6065 16.6871 26.8638 16.6871C25.1211 16.6871 23.9758 15.3924 23.9758 13.6498V8.37109H22.7305V13.6498C22.7305 16.0391 24.4731 17.8324 26.8638 17.8324C29.2545 17.8324 30.9971 16.0391 30.9971 13.6498V8.37109H29.7518Z"
                fill="#D4D2D2"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Sidepanel should render Sidepanel with logo - 2 1`] = `
<body>
  .c2 {
  background: red;
}

.c0 {
  height: 100vh;
  max-height: 100vh;
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  bottom: 0;
  top: 0;
  right: 0;
  display: block;
}

.c0 .c1 {
  height: 100vh;
  max-height: 100vh;
  border-right: solid 1px rgba(44,35,46,0.15);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: #F0F0F0;
}

.c0 .c1:before {
  content: '';
  background-image: url(url);
  background-size: cover;
  background-position: center;
  opacity: 1;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: 0;
}

<div>
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      />
    </div>
  </div>
</body>
`;
